tests/buffer/errors/set_value_256.dby
import std.buffer as buf

let b = buf.new(3)
buf.set(b, 0, 256)
